# dummy-equities-trading

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
chart_app/: apps.py  execute_trade.py  get_data.py  main.py  urls.py  views.py
chart_app/data/quotes/: latest_stock_quotes.csv
chart_app/templates/: chart_template.html
trading_portfolio_site/: asgi.py  settings.py  urls.py  wsgi.py
